--- a/index.html
+++ b/index.html
@@ -79,15 +79,8 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm Sowndarya, pursuing a Bachelor of Science in Digital & Cyber Forensic Science at SNMV College.
-
-
-
-
-
-
-
-        .</p>
+    <p>I'm  M.Sowndarya, pursuing a Bachelor of Science in Digital & Cyber Forensic Science at SNMV College.
+    .</p>
   </section>
 
   <section id="education">
@@ -99,8 +92,10 @@
     <h2>Skills</h2>
     <ul>
       <li>HTML/CSS</li>
-      <li>MySQL</li>
-      <li>Excel</li>
+      <li>React.js</li>
+      <li>Node.js </li>
+      <li>Express.js
+        <li>Mongo.db</li>
     </ul>
   </section>
 
